exports[`consistent-tuple-labels > invalid(1): type Foo = [a: string, number]; 1`] = `

  1 | type Foo = [a: string, number];

`;

exports[`consistent-tuple-labels > invalid(1): type Foo = [a: string, number]; 2`] = `

Message:
> 1 | type Foo = [a: string, number];
    |                        ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(10): type Foo = [a?: string, number]; 1`] = `

  1 | type Foo = [a?: string, number];

`;

exports[`consistent-tuple-labels > invalid(10): type Foo = [a?: string, number]; 2`] = `

Message:
> 1 | type Foo = [a?: string, number];
    |                         ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(11): type Foo = readonly [a: string, number]; 1`] = `

  1 | type Foo = readonly [a: string, number];

`;

exports[`consistent-tuple-labels > invalid(11): type Foo = readonly [a: string, number]; 2`] = `

Message:
> 1 | type Foo = readonly [a: string, number];
    |                                 ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(12): type Foo = [[a: number, number]]; 1`] = `

  1 | type Foo = [[a: number, number]];

`;

exports[`consistent-tuple-labels > invalid(12): type Foo = [[a: number, number]]; 2`] = `

Message:
> 1 | type Foo = [[a: number, number]];
    |                         ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(13): type Foo = [a: string, /* unlabeled */ number]; 1`] = `

  1 | type Foo = [a: string, /* unlabeled */ number];

`;

exports[`consistent-tuple-labels > invalid(13): type Foo = [a: string, /* unlabeled */ number]; 2`] = `

Message:
> 1 | type Foo = [a: string, /* unlabeled */ number];
    |                                        ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(2): type Foo = [string, b: number]; 1`] = `

  1 | type Foo = [string, b: number];

`;

exports[`consistent-tuple-labels > invalid(2): type Foo = [string, b: number]; 2`] = `

Message:
> 1 | type Foo = [string, b: number];
    |             ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(3): type Foo = [a: string, b: number, c: boolean, d]; 1`] = `

  1 | type Foo = [a: string, b: number, c: boolean, d];

`;

exports[`consistent-tuple-labels > invalid(3): type Foo = [a: string, b: number, c: boolean, d]; 2`] = `

Message:
> 1 | type Foo = [a: string, b: number, c: boolean, d];
    |                                               ^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(4): type Foo = [a: string, number, c: boolean]; 1`] = `

  1 | type Foo = [a: string, number, c: boolean];

`;

exports[`consistent-tuple-labels > invalid(4): type Foo = [a: string, number, c: boolean]; 2`] = `

Message:
> 1 | type Foo = [a: string, number, c: boolean];
    |                        ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(5): type Foo = [a: string, number, boolean]; 1`] = `

  1 | type Foo = [a: string, number, boolean];

`;

exports[`consistent-tuple-labels > invalid(5): type Foo = [a: string, number, boolean]; 2`] = `

Message:
> 1 | type Foo = [a: string, number, boolean];
    |                        ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(5): type Foo = [a: string, number, boolean]; 3`] = `

Message:
> 1 | type Foo = [a: string, number, boolean];
    |                                ^^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(6): type Foo = [a?: string, number?]; 1`] = `

  1 | type Foo = [a?: string, number?];

`;

exports[`consistent-tuple-labels > invalid(6): type Foo = [a?: string, number?]; 2`] = `

Message:
> 1 | type Foo = [a?: string, number?];
    |                         ^^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(7): type Foo = [string?, b: number]; 1`] = `

  1 | type Foo = [string?, b: number];

`;

exports[`consistent-tuple-labels > invalid(7): type Foo = [string?, b: number]; 2`] = `

Message:
> 1 | type Foo = [string?, b: number];
    |             ^^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(8): type Foo = [string, ...rest: number[]]; 1`] = `

  1 | type Foo = [string, ...rest: number[]];

`;

exports[`consistent-tuple-labels > invalid(8): type Foo = [string, ...rest: number[]]; 2`] = `

Message:
> 1 | type Foo = [string, ...rest: number[]];
    |             ^^^^^^ This tuple element should have a label, just like the other elements.

`;

exports[`consistent-tuple-labels > invalid(9): type Foo = [a: string, ...number[]]; 1`] = `

  1 | type Foo = [a: string, ...number[]];

`;

exports[`consistent-tuple-labels > invalid(9): type Foo = [a: string, ...number[]]; 2`] = `

Message:
> 1 | type Foo = [a: string, ...number[]];
    |                        ^^^^^^^^^^^ This tuple element should have a label, just like the other elements.

`;
